made footer responsive and fixed text align on the contact form header

--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -7,8 +7,6 @@
     width: 100%;
     box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.2);
     margin-inline: auto;
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
     background-color: rgba(238, 238, 238, 0.082);
     border-radius: 10px;
     display: flex;
@@ -27,6 +25,7 @@
       text-align: left;
       text-transform: uppercase;
       font-weight: 200;
+      font-size: 4.8rem;
       letter-spacing: 1px;
     }
 
