--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,10 +7,21 @@
     display: flex;
     p {
       flex: 1;
+      font-size: 2.2rem;
+    }
+
+    @media (max-width: 1059px) {
+      flex-direction: column;
+      text-align: center;
     }
   }
   &-made {
     color: #eee;
     text-align: right;
+
+    @media (max-width: 1059px) {
+      text-align: center;
+      margin-top: 1.8rem;
+    }
   }
 }
